<resources>
    <string name="app_name">Application Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="my_apps">My Nanodegree Apps!</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="bacon_reader">Bacon Reader</string>
    <string name="capstone_my_own_app">Capstone: My Own App</string>

    <string name="launch_spotify_streamer">This button will launch my Spotify Streamer app!</string>
    <string name="launch_scores_app">This button will launch my Scores App!</string>
    <string name="launch_library_app">This button will launch my Library App!</string>
    <string name="launch_build_it_bigger">This button will launch my Build It Bigger App!</string>
    <string name="launch_bacon_reader">This button will launch my Bacon Reader App!</string>
    <string name="launch_capstone_my_own_app">This button will launch my  Capstone: My Own App!</string>
</resources>
